// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select should be closed by default 1`] = `
<div class="form-group">
  <div class="form-builder-select-field input-group-container">
    <div class="form-control select-field-trigger">
      <div class="option-selected option-selected-placeholder"></div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
          <use xlink:href="icons.svg#caret-double"></use>
        </svg></a>
    </div>
  </div>
  <div class="dropdown-menu">
    <ul class="list-unstyled">
      <li class="dropdown-item" data-option-value="">choose-an-option</li>
    </ul>
  </div>
</div>
`;

exports[`Select should be not edidable 1`] = `
<div class="form-group">
  <div class="form-builder-select-field input-group-container">
    <div class="form-control select-field-trigger">
      <div class="option-selected option-selected-placeholder"></div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
          <use xlink:href="icons.svg#caret-double"></use>
        </svg></a>
    </div>
  </div>
  <div class="dropdown-menu">
    <ul class="list-unstyled">
      <li class="dropdown-item" data-option-value="">choose-an-option</li>
    </ul>
  </div>
</div>
`;

exports[`Select should have a helptext 1`] = `
<div class="form-group">
  <div class="form-builder-select-field input-group-container">
    <div class="form-control select-field-trigger">
      <div class="option-selected option-selected-placeholder"></div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
          <use xlink:href="icons.svg#caret-double"></use>
        </svg></a>
    </div>
  </div>
  <div class="dropdown-menu">
    <ul class="list-unstyled">
      <li class="dropdown-item" data-option-value="">choose-an-option</li>
    </ul>
  </div><span class="form-text">Type something</span>
</div>
`;

exports[`Select should have a key 1`] = `
<div class="form-group">
  <div class="form-builder-select-field input-group-container">
    <div class="form-control select-field-trigger">
      <div class="option-selected option-selected-placeholder"></div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
          <use xlink:href="icons.svg#caret-double"></use>
        </svg></a>
    </div>
  </div>
  <div class="dropdown-menu">
    <ul class="list-unstyled">
      <li class="dropdown-item" data-option-value="">choose-an-option</li>
    </ul>
  </div>
</div>
`;

exports[`Select should have a label 1`] = `
<div class="form-group"><label>label </label>
  <div class="form-builder-select-field input-group-container">
    <div class="form-control select-field-trigger">
      <div class="option-selected option-selected-placeholder"></div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
          <use xlink:href="icons.svg#caret-double"></use>
        </svg></a>
    </div>
  </div>
  <div class="dropdown-menu">
    <ul class="list-unstyled">
      <li class="dropdown-item" data-option-value="">choose-an-option</li>
    </ul>
  </div>
</div>
`;

exports[`Select should have a placeholder 1`] = `
<div class="form-group">
  <div class="form-builder-select-field input-group-container">
    <div class="form-control select-field-trigger">
      <div class="option-selected">Placeholder</div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
          <use xlink:href="icons.svg#caret-double"></use>
        </svg></a>
    </div>
  </div>
  <div class="dropdown-menu">
    <ul class="list-unstyled">
      <li class="dropdown-item" data-option-value="">Placeholder</li>
    </ul>
  </div>
</div>
`;

exports[`Select should have a predefinedValue 1`] = `
<div class="form-group">
  <div class="form-builder-select-field input-group-container">
    <div class="form-control select-field-trigger">
      <div class="option-selected option-selected-placeholder"></div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
          <use xlink:href="icons.svg#caret-double"></use>
        </svg></a>
    </div>
  </div>
  <div class="dropdown-menu">
    <ul class="list-unstyled">
      <li class="dropdown-item" data-option-value="">choose-an-option</li>
    </ul>
  </div>
</div>
`;

exports[`Select should have a spritemap 1`] = `
<div class="form-group">
  <div class="form-builder-select-field input-group-container">
    <div class="form-control select-field-trigger">
      <div class="option-selected option-selected-placeholder"></div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
          <use xlink:href="icons.svg#caret-double"></use>
        </svg></a>
    </div>
  </div>
  <div class="dropdown-menu">
    <ul class="list-unstyled">
      <li class="dropdown-item" data-option-value="">choose-an-option</li>
    </ul>
  </div>
</div>
`;

exports[`Select should have a value 1`] = `
<div class="form-group">
  <div class="form-builder-select-field input-group-container">
    <div class="form-control select-field-trigger">
      <div class="option-selected option-selected-placeholder"></div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
          <use xlink:href="icons.svg#caret-double"></use>
        </svg></a>
    </div>
  </div>
  <div class="dropdown-menu">
    <ul class="list-unstyled">
      <li class="dropdown-item" data-option-value="">choose-an-option</li>
    </ul>
  </div>
</div>
`;

exports[`Select should have an id 1`] = `
<div class="form-group">
  <div class="form-builder-select-field input-group-container">
    <div class="form-control select-field-trigger" id="ID">
      <div class="option-selected option-selected-placeholder"></div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
          <use xlink:href="icons.svg#caret-double"></use>
        </svg></a>
    </div>
  </div>
  <div class="dropdown-menu">
    <ul class="list-unstyled">
      <li class="dropdown-item" data-option-value="">choose-an-option</li>
    </ul>
  </div>
</div>
`;

exports[`Select should have class dropdown-opened when it's opened 1`] = `
<div class="form-group">
  <div class="form-builder-select-field input-group-container">
    <div class="form-control select-field-trigger">
      <div class="option-selected option-selected-placeholder"></div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
          <use xlink:href="icons.svg#caret-double"></use>
        </svg></a>
    </div>
  </div>
  <div class="dropdown-menu dropdown-opened">
    <ul class="list-unstyled">
      <li class="dropdown-item" data-option-value="">choose-an-option</li>
    </ul>
  </div>
</div>
`;

exports[`Select should not be required 1`] = `
<div class="form-group">
  <div class="form-builder-select-field input-group-container">
    <div class="form-control select-field-trigger">
      <div class="option-selected option-selected-placeholder"></div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
          <use xlink:href="icons.svg#caret-double"></use>
        </svg></a>
    </div>
  </div>
  <div class="dropdown-menu">
    <ul class="list-unstyled">
      <li class="dropdown-item" data-option-value="">choose-an-option</li>
    </ul>
  </div>
</div>
`;

exports[`Select should render Label if showLabel is true 1`] = `
<div class="form-group"><label>text </label>
  <div class="form-builder-select-field input-group-container">
    <div class="form-control select-field-trigger">
      <div class="option-selected option-selected-placeholder"></div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
          <use xlink:href="icons.svg#caret-double"></use>
        </svg></a>
    </div>
  </div>
  <div class="dropdown-menu">
    <ul class="list-unstyled">
      <li class="dropdown-item" data-option-value="">choose-an-option</li>
    </ul>
  </div>
</div>
`;

exports[`Select should render no options when options come empty 1`] = `
<div class="form-group">
  <div class="form-builder-select-field input-group-container">
    <div class="form-control select-field-trigger">
      <div class="option-selected option-selected-placeholder"></div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
          <use xlink:href="icons.svg#caret-double"></use>
        </svg></a>
    </div>
  </div>
  <div class="dropdown-menu">
    <ul class="list-unstyled">
      <li class="dropdown-item" data-option-value="">choose-an-option</li>
    </ul>
  </div>
</div>
`;

exports[`Select should render options 1`] = `
<div class="form-group">
  <div class="form-builder-select-field input-group-container">
    <div class="form-control select-field-trigger">
      <div class="option-selected option-selected-placeholder"></div><a class="select-arrow-down-container" href="javascript:;"><svg class="lexicon-icon lexicon-icon-caret-double" focusable="false" role="presentation">
          <use xlink:href="icons.svg#caret-double"></use>
        </svg></a>
    </div>
  </div>
  <div class="dropdown-menu">
    <ul class="list-unstyled">
      <li class="dropdown-item" data-option-value="">choose-an-option</li>
      <li class="dropdown-item" data-option-value="item">label</li>
    </ul>
  </div>
</div>
`;
